PiAtMaster/ingress/stripPrefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: kubernetes-dashboard
spec:
  stripPrefix:
    prefixes:
      - "/console"
    forceSlash: true
